Add feature to automatically resume paused video

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,6 +5,11 @@
   "version": "1.0.0",
   "content_scripts": [{
     "run_at": "document_end",
+    "matches": ["https://www.youtube.com/*"],
+    "all_frames": false,
+    "js": ["content.js"]
+  },{
+    "run_at": "document_end",
     "matches": ["https://www.youtube.com/live_chat*"],
     "all_frames": true,
     "js": ["content-iframe.js"]
