--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "YouTube Helper",
   "description": "Chrome Extension for YouTube",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "content_scripts": [{
     "run_at": "document_end",
     "matches": ["https://www.youtube.com/*"],
@@ -21,6 +21,7 @@
     "default_popup": "popup.html"
   },
   "permissions": [
-    "storage"
+    "storage",
+    "tabs"
   ]
 }
